[package]
name = "luajoin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = { version = "0.16.2", features = ["roblox"]}
colorize = "0.1.0"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"]}
notify = "5.0.0"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
simple-websockets = "0.1.4"

[profile.release]
strip = true
lto = true